Criamos  a listagem das escolas cadastradas e as menssagens de sistema

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,6 +11,7 @@
             <li><a routerLink="/user/new" class="link">Usuário</a></li>
             <!-- <li><a routerLink="/schools/register" class="link">Escolas</a></li> -->
             <li><a routerLink="/school/new-register" class="link">Cadastro Escola</a></li>
+            <li><a routerLink="/school/list" class="link">Lista de Escolas</a></li>
         </ul>
     </nav>
     
