Alteração na nomenclatura dos registros para escolas

--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -1,1 +1,6 @@
-<p>school-info works!</p>
+<div class="school" *ngIf="school">
+    <h1>{{ school.nomeescola }}</h1>
+    <h1>{{ school.responsavel }}</h1>
+    <h1>{{ school.email }}</h1>
+    <h1>{{ school.telefone }}</h1>
+</div>
