--- a/src/app/components/school/school/school.component.html
+++ b/src/app/components/school/school/school.component.html
@@ -1,6 +1,6 @@
 <h1 class="pt-5">CADASTRO ESCOLA</h1>
 
-<form (ngSubmit)="submit()" [formGroup]="registerForm" #formDir="ngForm">
+<form (ngSubmit)="submit()" [formGroup]="schoolForm" #formDir="ngForm">
     
     <h3>Identificação</h3>
     <div class="form-group">
