--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,9 @@
             <!-- <li><a routerLink="/user" class="link">Usuários</a></li> -->
             <li><a routerLink="/user/new" class="link">Usuário</a></li>
             <!-- <li><a routerLink="/schools/register" class="link">Escolas</a></li> -->
-            <li><a routerLink="/school/new-register" class="link">Cadastro Escola</a></li>
+            <li><a routerLink="/school/new-school" class="link">Cadastro Escola</a></li>
             <li><a routerLink="/school/list" class="link">Lista de Escolas</a></li>
+            <li><a routerLink="/school/info" class="link">Informação detalhada</a></li>
         </ul>
     </nav>
     
