Bug puxar insformações detalhadas das escolas corrigido e footer atualizado

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,6 @@
 <footer>
-    <h1>Footer improvisado!!!</h1>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2023 Copyright:
+        <a class="text-dark" href="#">Tecoffee.com</a>
+    </div>
 </footer>
