--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,8 +1,7 @@
 footer {
-    border-top: 1px solid grey;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: bottom;
+    padding-top: 13%;
     height: 200px;
 }
