--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,17 @@
 <header>
     
     <div class="step-logo">
-        <img src="assets/step_logo.png">
+        <a routerLink="/">
+            <img src="assets/step_logo.png">
+        </a>
     </div>
     
     <nav>
         <ul class="links">
-            <li><a routerLink="/" class="link">Login</a></li>
-            <!-- <li><a routerLink="/user" class="link">Usuários</a></li> -->
+            <!-- <li><a routerLink="/" class="link">Login</a></li> -->
             <li><a routerLink="/user/new" class="link">Usuário</a></li>
-            <!-- <li><a routerLink="/school/school" class="link">Escolas</a></li> -->
             <li><a routerLink="/school/new-school" class="link">Cadastro Escola</a></li>
             <li><a routerLink="/school/list" class="link">Lista de Escolas</a></li>
-            <!-- <li><a routerLink="/school/info" class="link">Informação detalhada</a></li> -->
         </ul>
     </nav>
     
