O login não funcionou, mas foi feito o CSS da home, cadastro de usuário e cadastro de escola

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer {
     display: flex;
     flex-direction: column;
-    justify-content: bottom;
-    padding-top: 13%;
-    height: 200px;
+    justify-content: center;
+    background-color: rgb(235, 235, 235);
+    height: 100px;
 }
