--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,17 +2,8 @@
     
     <div class="step-logo">
         <a routerLink="/">
-            <img src="assets/step_logo.png">
+            <img src="assets/step_logo_2.png">
         </a>
     </div>
-    
-    <nav>
-        <ul class="links">
-            <!-- <li><a routerLink="/" class="link">Login</a></li> -->
-            <li><a routerLink="/user/new" class="link">Usuário</a></li>
-            <li><a routerLink="/school/new-school" class="link">Cadastro Escola</a></li>
-            <li><a routerLink="/school/list" class="link">Lista de Escolas</a></li>
-        </ul>
-    </nav>
     
 </header>
