--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,35 +1,15 @@
 header {
-    border-bottom: 1px solid black;
+    background-color: rgb(235, 235, 235);
 }
 
-nav {
-    /* border:  1px solid red; */
-    display: flex;
-    justify-content: center;
-    padding: 1em;
-}
-
-.step-logo {
+.step-logo a {
+    /* border-bottom: 1px solid black; */
     display: flex;
     justify-content: center;
 }
 
 .step-logo img {
-    padding: 20px;
-    width: 400px;
+    padding: 30px 0;
+    width: 40%;
 }
 
-.links {
-    /* border:  1px solid red; */
-    display: flex;
-    justify-content: space-around;
-}
-
-.links li {
-    margin: 1em;
-}
-
-.link {
-    /* border:  1px solid red; */
-    font-size: 20px;
-}
