--- a/src/app/components/home-step/home-step.component.html
+++ b/src/app/components/home-step/home-step.component.html
@@ -1,3 +1,69 @@
-<h1>Realize seu login:</h1>
+<div class="d-flex pt-5 pb-5">
 
-<app-login></app-login>
+    <div class="nav-container">
+
+        <div class="dropend">
+            <button type="button" class="btn btn-user dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/users-icon.png">Usuários</button>
+                
+            <ul class="dropdown-menu">
+                <li><a routerLink="/user/new" class="link">Cadastrar</a></li>
+                <li><a routerLink="" class="link">Listar</a></li>
+            </ul>
+        </div>
+
+        <br>
+
+        <div class="dropend">
+            <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/school-icon.png">Escolas</button>
+                
+            <ul class="dropdown-menu">
+                <li><a routerLink="/school/new" class="link">Cadastrar</a></li>
+                <li><a routerLink="/school/list" class="link">Listar</a></li>
+            </ul>
+        </div>
+
+        <br>
+
+        <div class="dropend">
+            <button type="button" class="btn btn-component dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/component-icon.png">Componentes</button>
+                
+            <ul class="dropdown-menu">
+                <li><a routerLink="" class="link">Cadastrar</a></li>
+                <li><a routerLink="" class="link">Listar</a></li>
+            </ul>
+        </div>
+
+        <br>
+
+        <div class="dropend">
+            <button type="button" class="btn btn-kit dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/kit-icon.png">Kits</button>
+                
+            <ul class="dropdown-menu">
+                <li><a routerLink="" class="link">Cadastrar</a></li>
+                <li><a routerLink="" class="link">Listar</a></li>
+            </ul>
+        </div>
+
+        <br>
+
+        <div class="dropend">
+            <button type="button" class="btn btn-activity dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/activity-icon.png">Atividades</button>
+                
+            <ul class="dropdown-menu">
+                <li><a routerLink="" class="link">Cadastrar</a></li>
+                <li><a routerLink="" class="link">Listar</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="image-container d-none d-md-block">
+        <img src="../../../assets/step_sete.png">
+    </div>
+
+</div>
