--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,8 @@
-<div class="login-container">
+<h1>Realize seu login!</h1>
 
-    <!-- <div class="col-6 border w-100">
-        <img src="../../../assets/step_sete.png" class="w-100">
-    </div> -->
+<!-- <div class="login-container">
 
-    <div class="col-6 border w-100">
+    <div class="col-6 w-100">
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
             <input type="email" class="form-control" [(ngModel)]="credentials.email">
@@ -14,6 +12,22 @@
             <input type="password" class="form-control" [(ngModel)]="credentials.senha">
         </div>
         <button type="submit" class="btn btn-primary" (click)="login()">Entrar</button>
+    </div>
+
+</div> -->
+
+<div class="login-container">
+
+    <div class="col-6 w-100">
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <input type="email" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Senha</label>
+            <input type="password" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary">Entrar</button>
     </div>
 
 </div>
