--- a/src/styles.css
+++ b/src/styles.css
@@ -28,9 +28,22 @@ ul {
 
 /* FORM  */
 
-form {
-    width: 450px;
-    margin: 0;
+@media(min-height: 768px) {
+    form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+    
+}
+
+@media(max-height: 767px) {
+    form {
+        width: 100%;
+        margin: 0;
+    }
+    
 }
 
 .form-group {
@@ -44,25 +57,45 @@ form {
     font-size: 20px;
 }
 
-.form-group input {
-    padding: 2px;
+h1 {
+    text-align: center;
 }
 
-.form-group select {
-    padding: 2px;
+form option, select {
+    color: grey;
+}
+
+form h2, label {
+    padding-left: 20px;
+}
+
+form input, select {
+    border: 1px solid rgba(128, 128, 128, 0.11);
+    border-radius: 50px;
+    background-color: rgb(235, 235, 235);
+    padding: 2px 10px;
+}
+
+.btn-register {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-top: 50px;
 }
 
 input[type="submit"] {
-    background-color: rgb(214, 214, 214);
+    background-color: #2daae0;
+    color: white;
     border: 2px solid transparent;
     padding: 1px 6px;
     cursor: pointer;
     transition: .4s;
+    width: 30%;
 }
 
 input[type="submit"]:hover {
-    color: red;
-    border: 2px solid red;
+    color: black;
+    border: 2px solid black;
     background-color: white;
 }
 
