--- a/src/app/components/step/school-list/school-list.component.css
+++ b/src/app/components/step/school-list/school-list.component.css
@@ -3,30 +3,23 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
-
-.schools-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    justify-content: space-between;
-}
-
-.school {
-    /* border: 1px solid red; */
-    width: 50%;
-    margin-bottom: 1em;
-    text-align: center;
+    margin: 50px 0;
+    border: 1px solid rgba(128, 128, 128, 0.300);
+    border-radius: 10px;
+    background-color: rgb(235, 235, 235);
 }
 
 .search-container {
-    margin-bottom: 2em;
+    margin: 20px 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .search-container form{
     /* border: 1px solid red; */
-    width: 30%;
+    width: 60%;
     position: relative;
 }
 
@@ -42,5 +35,24 @@
     padding: 0.5em;
     width: 100%;
     text-align: center;
+    background-color: white;
 }
 
+.schools-container {
+    display: flex;
+    flex-wrap: wrap;
+    /* margin: 0 20px; */
+    justify-content: center;
+}
+
+.school {
+    width: 46%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid  rgba(128, 128, 128, 0.300);
+    /* margin: 10px 2%; */
+    border-radius: 10px;
+    background-color: white;
+}
