--- a/src/app/components/step/school-list/school-list.component.css
+++ b/src/app/components/step/school-list/school-list.component.css
@@ -1,3 +1,39 @@
+@media(min-width: 767px) {
+    .school h1 {
+        font-size: 30px;
+    }
+
+    .school {
+        width: 48%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid  rgba(128, 128, 128, 0.300);
+        margin-bottom: 4%;
+        border-radius: 10px;
+        background-color: white;
+    }
+}
+
+@media(max-width: 768px) {
+    .school h1 {
+        font-size: 24px;
+    }
+
+    .school {
+        width: 100%;
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid  rgba(128, 128, 128, 0.300);
+        margin-bottom: 4%;
+        border-radius: 10px;
+        background-color: white;
+    }
+}
+
 .list-container {
     display: flex;
     align-items: center;
@@ -41,18 +77,8 @@
 .schools-container {
     display: flex;
     flex-wrap: wrap;
-    /* margin: 0 20px; */
-    justify-content: center;
+    justify-content: space-between;
+    width: 92%;
+    margin: 0 4%;
 }
 
-.school {
-    width: 46%;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid  rgba(128, 128, 128, 0.300);
-    /* margin: 10px 2%; */
-    border-radius: 10px;
-    background-color: white;
-}
