Foi acrescentado razão social e cnpj no cadastro da escola, e foi retirado o email.

--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -4,7 +4,8 @@
     <div class="col-6 iden">
         <!-- <h1>Identificação</h1> -->
         <h3><b>Responsável:</b> {{ school.responsavel }}</h3>
-        <h3><b>Email:</b> {{ school.email }}</h3>
+        <h3><b>Razão Social:</b> {{ school.razaosocial }}</h3>
+        <h3><b>CNPJ:</b> {{ school.cnpj }}</h3>
         <h3><b>Telefone:</b> {{ school.telefone }}</h3>
     </div>
 
