--- a/src/app/components/step/user/user.component.html
+++ b/src/app/components/step/user/user.component.html
@@ -22,8 +22,8 @@
         <label for="tipo">Tipo:</label>
         <select formControlName="tipo" required>
             <option selected>Diretoria</option>
-            <option>Professor</option>
             <option>Step</option>
+            <!-- <option>Root</option> -->
         </select>
     </div>
 
