Feito o cadastro de salas e professores, feito a listagem de salas e informações detalhadas, só falta listar as salas dentro das informações das escolas

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,24 +1,8 @@
 <h1>Realize seu login!</h1>
 
-<!-- <div class="login-container">
-
-    <div class="col-6 w-100">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Email</label>
-            <input type="email" class="form-control" [(ngModel)]="credentials.email">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Senha</label>
-            <input type="password" class="form-control" [(ngModel)]="credentials.senha">
-        </div>
-        <button type="submit" class="btn btn-primary" (click)="login()">Entrar</button>
-    </div>
-
-</div> -->
-
 <div class="login-container">
 
-    <div class="col-6 w-100">
+    <!-- <div class="col-6 w-100">
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
             <input type="email" class="form-control">
@@ -28,6 +12,16 @@
             <input type="password" class="form-control">
         </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
-    </div>
+    </div> -->
+
+    <!-- <form (submit)="login()">
+        <input type="text" [(ngModel)]="email" placeholder="Email">
+        <input type="password" [(ngModel)]="senha" placeholder="Senha">
+        <button type="submit">Login</button>
+    </form>
+
+    <div *ngIf="isLoggedIn">
+        <p>Você está logado!</p>
+    </div> -->
 
 </div>
