--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -24,16 +24,19 @@
 </div>
 
 <h1 class="pb-5">Turmas</h1>
-<div class="text-center classes" *ngIf="classrooms.length > 0; else noClassrooms">
 
+<div *ngIf="school">
+    <ul>
+        <li><a routerLink="/school/{{ school.id }}/classroom/new">Cadastrar sala</a></li>
+    </ul>
+</div>
 
-    <div class="classroom" *ngFor="let classroom of classrooms">
-        <h1 class="m-0"><a routerLink="/classroom/{{ classroom.id }}">{{ classroom.ano }}</a></h1>
+<app-classroom-list></app-classroom-list>
+<!-- <div class="text-center classes">
+
+    <div class="inf">
+        <h5>INFANTIL</h5>
     </div>
-
-    <!-- <div class="inf" *ngIf="classrooms.ano == 'Infantil'; else '' ">
-        <app-classroom-list></app-classroom-list>
-    </div> -->
 
     <div class="fund-1">
         <h5>FUNDAMENTAL 1</h5>
@@ -47,8 +50,4 @@
         <h5>ENSINO MÉDIO</h5>
     </div>
 
-</div>
-
-<ng-template #noClassrooms>
-    <h1>Não há turmas cadastradas!</h1>
-</ng-template>
+</div> -->
