--- a/src/app/components/school/school-info/school-info.component.css
+++ b/src/app/components/school/school-info/school-info.component.css
@@ -17,41 +17,56 @@ h5 {
 }
 
 .iden {
-    /* border: 1px solid red; */
     text-align: right;
 }
 
 .end {
-    /* border: 1px solid red; */
     text-align: start;
     border-left: 2px solid black;
 }
 
-.classes {
-    /* border: 1px solid red; */
-    width: 100%;
+.classrooms-container {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
+}
+
+.classrooms-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     color: white;
+    
+}
+
+.classroom {
+    height: 50px;
+    width: 100%;
+    border: 1px solid grey;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 }
 
 .inf {
-    /* border: 1px solid red; */
     height: 60px;
-    width: 23%;
+    width: 100%;
     background-color: #e94e1b;
     border-radius: 10px;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .fund-1 {
-    /* border: 1px solid red; */
     height: 60px;
-    width: 23%;
+    width: 100%;
     background-color: #f8b037;
     border-radius: 10px;
     padding: 0;
@@ -61,9 +76,8 @@ h5 {
 }
 
 .fund-2 {
-    /* border: 1px solid red; */
     height: 60px;
-    width: 23%;
+    width: 100%;
     background-color: #2daae0;
     border-radius: 10px;
     padding: 0;
@@ -73,9 +87,8 @@ h5 {
 }
 
 .med {
-    /* border: 1px solid red; */
     height: 60px;
-    width: 23%;
+    width: 100%;
     background-color: #1fa5bc;
     border-radius: 10px;
     padding: 0;
