--- a/src/app/components/school/school-info/school-info.component.html
+++ b/src/app/components/school/school-info/school-info.component.html
@@ -31,24 +31,93 @@
 
 <h1 class="pb-5">Turmas</h1>
 
-<app-classroom-list></app-classroom-list>
+<div class="classrooms-container" *ngIf="classrooms.length > 0;else noSchools">
 
-<!-- <div class="text-center classes">
-
-    <div class="inf">
-        <h5>INFANTIL</h5>
+    <div class="classrooms-info">
+        <div class="inf">
+            <h5>INFANTIL</h5>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="w-100">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
     </div>
 
-    <div class="fund-1">
-        <h5>FUNDAMENTAL 1</h5>
+    <div class="classrooms-info">
+        <div class="fund-1">
+            <h5>FUNDAMENTAL 1</h5>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="w-100">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
     </div>
 
-    <div class="fund-2">
-        <h5>FUNDAMENTAL 2</h5>
+    <div class="classrooms-info">
+        <div class="fund-2">
+            <h5>FUNDAMENTAL 2</h5>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="w-100">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano
+                        }}</a>
+                </h5>
+            </div>
+        </div>
     </div>
 
-    <div class="med">
-        <h5>ENSINO MÉDIO</h5>
+    <div class="classrooms-info">
+        <div class="med">
+            <h5>ENSINO MÉDIO</h5>
+        </div>
+        <div *ngFor="let classroom of classrooms" class="w-100">
+            <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino médio'" class="classroom">
+                <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano }}</a>
+                </h5>
+            </div>
+        </div>
     </div>
 
+</div>
+
+<ng-template #noSchools>
+    <h1>Não há turmas cadastradas!</h1>
+</ng-template>
+
+<!-- <div class="classrooms-container"> -->
+
+<!-- <div *ngFor="let classroom of classrooms" class="classrooms">
+    <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Infantil'" class="classroom">
+        <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano }}</a>
+        </h5>
+    </div>
 </div> -->
+
+<!-- <div *ngFor="let classroom of classrooms" class="classrooms">
+    <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 1'" class="classroom">
+        <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano }}</a>
+        </h5>
+    </div>
+</div> -->
+
+<!-- <div *ngFor="let classroom of classrooms" class="classrooms">
+    <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Fundamental 2'" class="classroom">
+        <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano }}</a>
+        </h5>
+    </div>
+</div> -->
+
+<!-- <div *ngFor="let classroom of classrooms" class="classrooms">
+    <div *ngIf="classroom.schools_id == school?.id && classroom.ano == 'Ensino médio'" class="classroom">
+        <h5 class="m-0"><a routerLink="/school/{{ school?.id }}/classroom/{{ classroom.id }}">{{ classroom.ano }}</a>
+        </h5>
+    </div>
+</div> -->
+
+<!-- </div> -->
