--- a/src/app/components/home-step/home-step.component.html
+++ b/src/app/components/home-step/home-step.component.html
@@ -3,8 +3,8 @@
     <div class="nav-container">
 
         <div class="dropend">
-            <button type="button" class="btn btn-user dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false"><img src="../../../assets/users-icon.png">Usuários</button>
+            <button type="button" class="btn btn-1 dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/user-icon-white.png">Usuários</button>
                 
             <ul class="dropdown-menu">
                 <li><a routerLink="/user/new" class="link">Cadastrar</a></li>
@@ -15,8 +15,8 @@
         <br>
 
         <div class="dropend">
-            <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false"><img src="../../../assets/school-icon.png">Escolas</button>
+            <button type="button" class="btn btn-5 dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/school-icon-white.png">Escolas</button>
                 
             <ul class="dropdown-menu">
                 <li><a routerLink="/school/new" class="link">Cadastrar</a></li>
@@ -27,8 +27,8 @@
         <br>
 
         <div class="dropend">
-            <button type="button" class="btn btn-component dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false"><img src="../../../assets/component-icon.png">Componentes</button>
+            <button type="button" class="btn btn-2 dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/component-icon-white.png">Componentes</button>
                 
             <ul class="dropdown-menu">
                 <li><a routerLink="" class="link">Cadastrar</a></li>
@@ -39,8 +39,8 @@
         <br>
 
         <div class="dropend">
-            <button type="button" class="btn btn-kit dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false"><img src="../../../assets/kit-icon.png">Kits</button>
+            <button type="button" class="btn btn-3 dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/kit-icon-white.png">Kits</button>
                 
             <ul class="dropdown-menu">
                 <li><a routerLink="" class="link">Cadastrar</a></li>
@@ -51,8 +51,8 @@
         <br>
 
         <div class="dropend">
-            <button type="button" class="btn btn-activity dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false"><img src="../../../assets/activity-icon.png">Atividades</button>
+            <button type="button" class="btn btn-4 dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false"><img src="../../../assets/activity-icon-white.png">Atividades</button>
                 
             <ul class="dropdown-menu">
                 <li><a routerLink="" class="link">Cadastrar</a></li>
